--- a/style.css
+++ b/style.css
@@ -572,4 +572,33 @@ ul {
   -webkit-transition-delay: 400ms;
           transition-delay: 400ms;
 }
+
+/* ---------------------------
+
+        image compare 
+
+----------------------------*/
+.cocoen-drag {
+  background: #C8102E;
+  bottom: 0;
+  cursor: ew-resize;
+  left: 50%;
+  margin-left: -1px;
+  position: absolute;
+  top: 0;
+  width: 2px;
+}
+
+.cocoen-drag::before {
+  border-radius: 4px;
+  border: 2px solid #C8102E;
+  content: "";
+  height: 30px;
+  left: 50%;
+  margin-left: -7px;
+  margin-top: -18px;
+  position: absolute;
+  top: 50%;
+  width: 14px;
+}
 /*# sourceMappingURL=style.css.map */
