--- a/style.css
+++ b/style.css
@@ -85,7 +85,7 @@ ul {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  overflow: auto;
+  overflow: hidden;
   height: calc(var(--main-m) * 9 / 16);
   padding: 0px;
 }
@@ -600,5 +600,95 @@ ul {
   position: absolute;
   top: 50%;
   width: 14px;
+}
+
+/* -------------------------------------------------------
+
+        SMALL SCREENS
+
+--------------------------------------------------------*/
+@media only screen and (max-width: 1050px) {
+  .nav-space {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .nav-space :nth-child(2) {
+    display: none;
+  }
+  .small-text h2 {
+    color: var(--red);
+  }
+  .small-text p {
+    font-size: larger;
+    width: 100%;
+  }
+  .left p {
+    width: 100%;
+  }
+  .big-text-container {
+    height: 10vh;
+  }
+  .big-text-container h1 {
+    width: 90vw;
+    margin: 0em;
+    color: gray;
+    font-size: 5vw;
+  }
+  .container-2up {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .container-2up .main-carousel {
+    width: 100%;
+  }
+  .expanding3x2 {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .expanding3x2 .text-jump {
+    display: none;
+  }
+  .expanding-col {
+    height: 33vh;
+    width: 100%;
+    -ms-flex-negative: 8;
+        flex-shrink: 8;
+    -webkit-transition: all .5s;
+    transition: all .5s;
+  }
+  .expanding-col div {
+    height: 100%;
+  }
+  .expanding-col .clear3d {
+    background-image: url(gifs/Clear_3d.gif);
+  }
+  .expanding-col .clearCel {
+    background-image: url(gifs/Clear_Cel_1.gif);
+  }
+  .expanding-col .clearMain {
+    background-image: url(gifs/Clear_main.gif);
+  }
+  .expanding-col:hover {
+    width: 95%;
+    -webkit-box-flex: 8;
+        -ms-flex-positive: 8;
+            flex-grow: 8;
+    -webkit-transition: all .5s;
+    transition: all .5s;
+  }
 }
 /*# sourceMappingURL=style.css.map */
