--- a/style.scss
+++ b/style.scss
@@ -596,6 +596,7 @@ bottom:-20%;
         width: 100%;
         flex-shrink: 8;
         transition: all .5s;
+        padding-bottom: 2em;
         div{
             height: 100%;
         }
@@ -618,4 +619,30 @@ bottom:-20%;
         flex-grow: 8;
         transition: all .5s;
     }
+    .corners-container{
+        flex-direction: column;
+        height: max-content;
+    }
+    .corners-row{
+        flex-direction: column;
+    }
+    .z2{
+        display: none;
+    }
+    .overlay{
+        display: none;
+    }
+    .image-container{
+        position: unset;
+    }
+    .gif-container{
+        padding-bottom: 2em;
+    }
+    .music-text li{
+        font-size: large;
+    }
+    .music-text-active li{
+        font-size: large;
+    }
+
 }
